add relation method
